# minilab

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: park-mode.ts
src/minilab/: __init__.py  markdown.py
tests/: test_markdown_headers.py
